--- a/roles/k8s_node/templates/k8s_configs/kube-proxy.conf.j2
+++ b/roles/k8s_node/templates/k8s_configs/kube-proxy.conf.j2
@@ -4,6 +4,7 @@ bindAddress: {{ k8s_node__kube_proxy_opts.bind_address }}
 clientConnection:
   kubeconfig: {{ k8s_node__kubeconfig_dir }}/kube-proxy.kubeconfig
 clusterCIDR: {{ k8s__cluster_cidr }}
+enableProfiling: {{ k8s_node__kube_proxy_opts.enable_profiling }}
 {% if k8s__feature_gates %}
 featureGates:
     {%- for _fg_name, _fg_flag in k8s__feature_gates.items() %}
@@ -12,3 +13,6 @@ featureGates:
 
     {%- endfor %}
 {% endif %}
+
+healthzBindAddress: {{ k8s_node__kube_proxy_opts.healthz_bind_address }}
+metricsBindAddress: {{ k8s_node__kube_proxy_opts.metrics_bind_address }}
