--- a/roles/k8s_master/templates/k8s_configs/kube-scheduler.conf.j2
+++ b/roles/k8s_master/templates/k8s_configs/kube-scheduler.conf.j2
@@ -1,5 +1,6 @@
 kind: KubeSchedulerConfiguration
 apiVersion: componentconfig/v1alpha1
+enableProfiling: {{ k8s_master__kube_scheduler_opts.enable_profiling }}
 {% if k8s__feature_gates %}
 featureGates:
     {%- for _fg_name, _fg_flag in k8s__feature_gates.items() %}
