--- a/roles/k8s_node/templates/k8s_configs/kubelet.conf.j2
+++ b/roles/k8s_node/templates/k8s_configs/kubelet.conf.j2
@@ -19,6 +19,7 @@ clusterDNS: [{{ k8s__dns_server_ip_addrs }}]
 clusterDomain: {{ k8s__dns_cluster_domain }}
 containerLogMaxFiles: {{ k8s_node__kubelet_opts.container_log_max_files }}
 containerLogMaxSize: {{ k8s_node__kubelet_opts.container_log_max_size }}
+failSwapOn: {{ k8s_node__kubelet_opts.fail_swap_on }}
 {% if k8s__feature_gates %}
 featureGates:
     {%- for _fg_name, _fg_flag in k8s__feature_gates.items() %}
@@ -28,6 +29,8 @@ featureGates:
     {%- endfor %}
 {% endif %}
 
+healthzBindAddress: {{ k8s_node__kubelet_opts.healthz_bind_address }}
+healthzPort: {{ k8s_node__kubelet_opts.healthz_port }}
 maxOpenFiles: {{ k8s_node__kubelet_opts.max_open_files }}
 maxPods: {{ k8s_node__kubelet_opts.max_pods }}
 port: {{ k8s__kubelet_port }}
