--- a/roles/k8s_node/templates/systemd_units/kubelet.service.j2
+++ b/roles/k8s_node/templates/systemd_units/kubelet.service.j2
@@ -11,15 +11,15 @@ ExecStart=/usr/bin/kubelet \
   --allow-privileged=true \
   --bootstrap-kubeconfig={{ k8s_node__kubeconfig_dir }}/bootstrap.kubeconfig \
   --cadvisor-port=0 \
-  --cert-dir={{ k8s_node__kubelet_opts.cert_dir }} \
+  --cert-dir={{ k8s_node__kubelet_cert_dir }} \
   --config={{ k8s_node__k8s_configs_dir }}/kubelet.conf \
-  --cni-bin-dir={{ k8s_node__kubelet_opts.cni_bin_dir }} \
-  --cni-conf-dir={{ k8s_node__kubelet_opts.cni_conf_dir }} \
+  --cni-bin-dir={{ k8s_node__kubelet_cni_bin_dir }} \
+  --cni-conf-dir={{ k8s_node__kubelet_cni_conf_dir }} \
   --kubeconfig={{ k8s_node__kubeconfig_dir }}/kubelet.kubeconfig \
   --network-plugin=cni \
-  --pod-infra-container-image={{ k8s_node__kubelet_opts.pod_infra_container_image }} \
-  --rotate-certificates={{ k8s_node__kubelet_opts.rotate_certificates }} \
-  --v={{ k8s_node__kubelet_opts.vlog_level }}
+  --pod-infra-container-image={{ k8s_node__kubelet_pod_infra_container_image }} \
+  --rotate-certificates={{ k8s_node__kubelet_rotate_certificates }} \
+  --v={{ k8s_node__kubelet_vlog_level }}
 Restart=always
 RestartSec={{ k8s_node__kubelet_restart_sec }}s
 
