--- a/roles/k8s_master/templates/systemd_units/kube-apiserver.service.j2
+++ b/roles/k8s_master/templates/systemd_units/kube-apiserver.service.j2
@@ -26,33 +26,37 @@ ExecStart=/usr/bin/kube-apiserver \
   --allow-privileged=true \
   --anonymous-auth=false \
   --apiserver-count={{ _apiservers | length }} \
-  --audit-log-format={{ k8s_master__kube_apiserver_opts.audit_log_format }} \
-  --audit-log-maxage={{ k8s_master__kube_apiserver_opts.audit_log_maxage }} \
-  --audit-log-maxbackup={{ k8s_master__kube_apiserver_opts.audit_log_maxbackup }} \
-  --audit-log-maxsize={{ k8s_master__kube_apiserver_opts.audit_log_maxsize }} \
-  --audit-log-path={{ k8s_master__kube_apiserver_opts.audit_log_path }} \
+  --audit-log-format={{ k8s_master__kube_apiserver_audit_log_format }} \
+  --audit-log-maxage={{ k8s_master__kube_apiserver_audit_log_maxage }} \
+  --audit-log-maxbackup={{ k8s_master__kube_apiserver_audit_log_maxbackup }} \
+  --audit-log-maxsize={{ k8s_master__kube_apiserver_audit_log_maxsize }} \
+  --audit-log-path={{ k8s_master__kube_apiserver_audit_log_path }} \
   --audit-policy-file={{ k8s_master__k8s_configs_dir }}/audit-policy.conf \
   --authorization-mode=Node,RBAC \
-  --bind-address={{ k8s_master__kube_apiserver_opts.bind_address }} \
+  --bind-address={{ k8s_master__kube_apiserver_bind_address }} \
   --client-ca-file={{ k8s_master__pki_dir }}/{{ pki_tasks__fetch_k8s_ca_crt.dest | basename }} \
-  --enable-admission-plugins={{ k8s_master__kube_apiserver_opts.enable_admission_plugins }} \
+  --enable-admission-plugins={{ k8s_master__kube_apiserver_enable_admission_plugins }} \
   --enable-bootstrap-token-auth=true \
   --etcd-cafile={{ k8s_master__pki_dir }}/{{ pki_tasks__fetch_etcd_ca_crt.dest | basename }} \
   --etcd-certfile={{ k8s_master__pki_dir }}/{{ pki_tasks__fetch_etcd_client_crt.dest | basename }} \
   --etcd-keyfile={{ k8s_master__pki_dir }}/{{ pki_tasks__fetch_etcd_client_key.dest | basename }} \
-  --etcd-servers={{ _etcd_servers|join(',') }} \
-  --experimental-encryption-provider-config={{ k8s_master__k8s_configs_dir }}/encryption.conf \
-{% if _feature_gates|length > 0 %}
-  --feature-gates={{ _feature_gates|join(',') }} \
+{% if k8s_master__kube_apiserver_etcd_servers.auto_set %}
+  --etcd-servers={{ _etcd_servers | join(',') }} \
+{% else %}
+  --etcd-servers={{ k8s_master__kube_apiserver_etcd_servers.servers }} \
 {% endif %}
-  --insecure-port={{ k8s_master__kube_apiserver_opts.insecure_port }} \
+  --experimental-encryption-provider-config={{ k8s_master__k8s_configs_dir }}/encryption.conf \
+{% if _feature_gates | length > 0 %}
+  --feature-gates={{ _feature_gates | join(',') }} \
+{% endif %}
+  --insecure-port={{ k8s_master__kube_apiserver_insecure_port }} \
   --kubelet-certificate-authority={{ k8s_master__pki_dir }}/{{ pki_tasks__fetch_k8s_ca_crt.dest | basename }} \
   --kubelet-client-certificate={{ k8s_master__pki_dir }}/{{ pki_tasks__fetch_apiserver_kubelet_client_crt.dest | basename }} \
   --kubelet-client-key={{ k8s_master__pki_dir }}/{{ pki_tasks__fetch_apiserver_kubelet_client_key.dest | basename }} \
   --kubelet-port={{ k8s__kubelet_port }} \
-  --kubelet-preferred-address-types={{ k8s_master__kube_apiserver_opts.kubelet_preferred_address_types }} \
-  --kubernetes-service-node-port={{ k8s_master__kube_apiserver_opts.kubernetes_service_node_port }} \
-  --profiling={{ k8s_master__kube_apiserver_opts.profiling }} \
+  --kubelet-preferred-address-types={{ k8s_master__kube_apiserver_kubelet_preferred_address_types }} \
+  --kubernetes-service-node-port={{ k8s_master__kube_apiserver_kubernetes_service_node_port }} \
+  --profiling={{ k8s_master__kube_apiserver_profiling }} \
   --proxy-client-cert-file={{ k8s_master__pki_dir }}/{{ pki_tasks__fetch_front_proxy_client_crt.dest | basename }} \
   --proxy-client-key-file={{ k8s_master__pki_dir }}/{{ pki_tasks__fetch_front_proxy_client_key.dest | basename }} \
   --requestheader-allowed-names=front-proxy-client \
@@ -63,12 +67,12 @@ ExecStart=/usr/bin/kube-apiserver \
   --secure-port={{ k8s__kube_apiserver_secure_port }} \
   --service-account-key-file={{ k8s_master__pki_dir }}/{{ pki_tasks__fetch_kube_controller_manager_pub.dest | basename }} \
   --service-cluster-ip-range={{ k8s__service_cluster_ip_range }} \
-  --service-node-port-range={{ k8s_master__kube_apiserver_opts.service_node_port_range }} \
+  --service-node-port-range={{ k8s_master__kube_apiserver_service_node_port_range }} \
   --tls-cert-file={{ k8s_master__pki_dir }}/{{ pki_tasks__fetch_kube_apiserver_crt.dest | basename }} \
-  --tls-cipher-suites={{ k8s_master__kube_apiserver_opts.tls_cipher_suites }} \
-  --tls-min-version={{ k8s_master__kube_apiserver_opts.tls_min_version }} \
+  --tls-cipher-suites={{ k8s_master__kube_apiserver_tls_cipher_suites }} \
+  --tls-min-version={{ k8s_master__kube_apiserver_tls_min_version }} \
   --tls-private-key-file={{ k8s_master__pki_dir }}/{{ pki_tasks__fetch_kube_apiserver_key.dest | basename }} \
-  --v={{ k8s_master__kube_apiserver_opts.vlog_level }}
+  --v={{ k8s_master__kube_apiserver_vlog_level }}
 Restart=always
 RestartSec={{ k8s_master__kube_apiserver_restart_sec }}s
 
