--- a/roles/k8s_master/templates/systemd_units/kube-controller-manager.service.j2
+++ b/roles/k8s_master/templates/systemd_units/kube-controller-manager.service.j2
@@ -12,27 +12,27 @@ User=kubernetes
 Group=kubernetes
 ExecStart=/usr/bin/kube-controller-manager \
   --allocate-node-cidrs=true \
-  --bind-address={{ k8s_master__kube_controller_manager_opts.bind_address }} \
+  --bind-address={{ k8s_master__kube_controller_manager_bind_address }} \
   --cluster-cidr={{ k8s__cluster_cidr }} \
   --cluster-name={{ k8s__k8s_cluster_name }} \
   --cluster-signing-cert-file={{ k8s_master__pki_dir }}/{{ pki_tasks__fetch_k8s_ca_crt.dest | basename }} \
   --cluster-signing-key-file={{ k8s_master__pki_dir }}/{{ pki_tasks__fetch_k8s_ca_key.dest | basename }} \
-  --controllers={{ k8s_master__kube_controller_manager_opts.controllers }} \
-  --enable-hostpath-provisioner={{ k8s_master__kube_controller_manager_opts.enable_hostpath_provisioner }} \
-  --experimental-cluster-signing-duration={{ k8s_master__kube_controller_manager_opts.cluster_signing_duration }} \
+  --controllers={{ k8s_master__kube_controller_manager_controllers }} \
+  --enable-hostpath-provisioner={{ k8s_master__kube_controller_manager_enable_hostpath_provisioner }} \
+  --experimental-cluster-signing-duration={{ k8s_master__kube_controller_manager_cluster_signing_duration }} \
 {% if _feature_gates|length > 0 %}
   --feature-gates={{ _feature_gates|join(',') }} \
 {% endif %}
   --kubeconfig={{ k8s_master__kubeconfig_dir }}/kube-controller-manager.kubeconfig \
-  --node-cidr-mask-size={{ k8s_master__kube_controller_manager_opts.node_cidr_mask_size }} \
-  --port={{ k8s_master__kube_controller_manager_opts.port }} \
-  --profiling={{ k8s_master__kube_controller_manager_opts.profiling }} \
+  --node-cidr-mask-size={{ k8s_master__kube_controller_manager_node_cidr_mask_size }} \
+  --port={{ k8s_master__kube_controller_manager_port }} \
+  --profiling={{ k8s_master__kube_controller_manager_profiling }} \
   --root-ca-file={{ k8s_master__pki_dir }}/{{ pki_tasks__fetch_k8s_ca_crt.dest | basename }} \
-  --secure-port={{ k8s_master__kube_controller_manager_opts.secure_port }} \
+  --secure-port={{ k8s_master__kube_controller_manager_secure_port }} \
   --service-account-private-key-file={{ k8s_master__pki_dir }}/{{ pki_tasks__fetch_kube_controller_manager_key.dest | basename }} \
   --service-cluster-ip-range={{ k8s__service_cluster_ip_range }} \
   --use-service-account-credentials=true \
-  --v={{ k8s_master__kube_controller_manager_opts.vlog_level }}
+  --v={{ k8s_master__kube_controller_manager_vlog_level }}
 Restart=always
 RestartSec={{ k8s_master__kube_controller_manager_restart_sec }}s
 
