--- a/roles/k8s_master/templates/systemd_units/kube-scheduler.service.j2
+++ b/roles/k8s_master/templates/systemd_units/kube-scheduler.service.j2
@@ -8,7 +8,7 @@ User=kubernetes
 Group=kubernetes
 ExecStart=/usr/bin/kube-scheduler \
   --config={{ k8s_master__k8s_configs_dir }}/kube-scheduler.conf \
-  --v={{ k8s_master__kube_scheduler_opts.vlog_level }}
+  --v={{ k8s_master__kube_scheduler_vlog_level }}
 Restart=always
 RestartSec={{ k8s_master__kube_scheduler_restart_sec }}s
 
