Add portRange to kube-proxy.conf.

--- a/roles/k8s_node/templates/k8s_configs/kube-proxy.conf.j2
+++ b/roles/k8s_node/templates/k8s_configs/kube-proxy.conf.j2
@@ -16,3 +16,4 @@ featureGates:
 
 healthzBindAddress: {{ k8s_node__kube_proxy_healthz_bind_address }}
 metricsBindAddress: {{ k8s_node__kube_proxy_metrics_bind_address }}
+portRange: {{ k8s_node__kube_proxy_port_range }}
