--- a/roles/k8s_node/templates/k8s_configs/kubelet.conf.j2
+++ b/roles/k8s_node/templates/k8s_configs/kubelet.conf.j2
@@ -33,6 +33,7 @@ healthzBindAddress: {{ k8s_node__kubelet_healthz_bind_address }}
 healthzPort: {{ k8s_node__kubelet_healthz_port }}
 maxOpenFiles: {{ k8s_node__kubelet_max_open_files }}
 maxPods: {{ k8s_node__kubelet_max_pods }}
+podPidsLimit: {{ k8s_node__kubelet_pod_pids_limit }}
 port: {{ k8s__kubelet_port }}
 readOnlyPort: 0
 {% if k8s__static_pod.enabled %}
