--- a/roles/k8s_master/templates/systemd_units/kube-apiserver.service.j2
+++ b/roles/k8s_master/templates/systemd_units/kube-apiserver.service.j2
@@ -59,6 +59,7 @@ ExecStart=/usr/bin/kube-apiserver \
   --profiling={{ k8s_master__kube_apiserver_profiling }} \
   --proxy-client-cert-file={{ k8s_master__pki_dir }}/{{ pki_tasks__fetch_front_proxy_client_crt.dest | basename }} \
   --proxy-client-key-file={{ k8s_master__pki_dir }}/{{ pki_tasks__fetch_front_proxy_client_key.dest | basename }} \
+  --repair-malformed-updates={{ k8s_master__kube_apiserver_repair_malformed_updates }} \
   --requestheader-allowed-names=front-proxy-client \
   --requestheader-client-ca-file={{ k8s_master__pki_dir }}/{{ pki_tasks__fetch_front_proxy_ca_crt.dest | basename }} \
   --requestheader-extra-headers-prefix=X-Remote-Extra- \
