Change to use a hostvar instead of ansible_facts.default_ipv4.

--- a/roles/pki/templates/pki/openssl.conf.j2
+++ b/roles/pki/templates/pki/openssl.conf.j2
@@ -26,7 +26,7 @@ IP.2 = {{ k8s_master__service_ip_addr }}
 {% for _, _hostvar in hostvars.items() %}
     {%- if _hostvar.host__k8s_master %}
 DNS.{{ _dns_idx }} = {{ _hostvar.ansible_facts.fqdn }}
-IP.{{ _ip_idx }} = {{ _hostvar.ansible_facts.default_ipv4.address }}
+IP.{{ _ip_idx }} = {{ _hostvar.host__public_address }}
         {%- set _dns_idx = _dns_idx + 1 %}
         {%- set _ip_idx = _ip_idx + 1 %}
     {%- endif %}
@@ -48,7 +48,7 @@ IP.1 = 127.0.0.1
 {% for _, _hostvar in hostvars.items() %}
     {%- if _hostvar.host__etcd %}
 DNS.{{ _dns_idx }} = {{ _hostvar.ansible_facts.fqdn }}
-IP.{{ _ip_idx }} = {{ _hostvar.ansible_facts.default_ipv4.address }}
+IP.{{ _ip_idx }} = {{ _hostvar.host__public_address }}
         {%- set _dns_idx = _dns_idx + 1 %}
         {%- set _ip_idx = _ip_idx + 1 %}
     {%- endif %}
