--- a/roles/k8s_master/templates/systemd_units/kube-controller-manager.service.j2
+++ b/roles/k8s_master/templates/systemd_units/kube-controller-manager.service.j2
@@ -15,8 +15,8 @@ ExecStart=/usr/bin/kube-controller-manager \
   --bind-address={{ k8s_master__kube_controller_manager_bind_address }} \
   --cluster-cidr={{ k8s__cluster_cidr }} \
   --cluster-name={{ k8s__k8s_cluster_name }} \
-  --cluster-signing-cert-file={{ k8s_master__pki_dir }}/{{ pki_tasks__fetch_k8s_ca_crt.dest | basename }} \
-  --cluster-signing-key-file={{ k8s_master__pki_dir }}/{{ pki_tasks__fetch_k8s_ca_key.dest | basename }} \
+  --cluster-signing-cert-file={{ k8s_master__pki_dir }}/ca.crt \
+  --cluster-signing-key-file={{ k8s_master__pki_dir }}/ca.key \
   --controllers={{ k8s_master__kube_controller_manager_controllers }} \
   --enable-hostpath-provisioner={{ k8s_master__kube_controller_manager_enable_hostpath_provisioner }} \
   --experimental-cluster-signing-duration={{ k8s_master__kube_controller_manager_cluster_signing_duration }} \
@@ -27,9 +27,9 @@ ExecStart=/usr/bin/kube-controller-manager \
   --node-cidr-mask-size={{ k8s_master__kube_controller_manager_node_cidr_mask_size }} \
   --port={{ k8s_master__kube_controller_manager_port }} \
   --profiling={{ k8s_master__kube_controller_manager_profiling }} \
-  --root-ca-file={{ k8s_master__pki_dir }}/{{ pki_tasks__fetch_k8s_ca_crt.dest | basename }} \
+  --root-ca-file={{ k8s_master__pki_dir }}/ca.crt \
   --secure-port={{ k8s_master__kube_controller_manager_secure_port }} \
-  --service-account-private-key-file={{ k8s_master__pki_dir }}/{{ pki_tasks__fetch_kube_controller_manager_key.dest | basename }} \
+  --service-account-private-key-file={{ k8s_master__pki_dir }}/kube-controller-manager.key \
   --service-cluster-ip-range={{ k8s__service_cluster_ip_range }} \
   --use-service-account-credentials=true \
   --v={{ k8s_master__kube_controller_manager_vlog_level }}
