--- a/roles/k8s_master/templates/systemd_units/kube-apiserver.service.j2
+++ b/roles/k8s_master/templates/systemd_units/kube-apiserver.service.j2
@@ -22,7 +22,7 @@ After=network.target
 User=kubernetes
 Group=kubernetes
 ExecStart=/usr/bin/kube-apiserver \
-  --advertise-address={{ k8s__advertise_address }} \
+  --advertise-address={{ host__public_address }} \
   --allow-privileged=true \
   --anonymous-auth=false \
   --apiserver-count={{ _apiservers | length }} \
@@ -34,12 +34,12 @@ ExecStart=/usr/bin/kube-apiserver \
   --audit-policy-file={{ k8s_master__k8s_configs_dir }}/audit-policy.conf \
   --authorization-mode=Node,RBAC \
   --bind-address={{ k8s_master__kube_apiserver_bind_address }} \
-  --client-ca-file={{ k8s_master__pki_dir }}/{{ pki_tasks__fetch_k8s_ca_crt.dest | basename }} \
+  --client-ca-file={{ k8s_master__pki_dir }}/ca.crt \
   --enable-admission-plugins={{ k8s_master__kube_apiserver_enable_admission_plugins }} \
   --enable-bootstrap-token-auth=true \
-  --etcd-cafile={{ k8s_master__pki_dir }}/{{ pki_tasks__fetch_etcd_ca_crt.dest | basename }} \
-  --etcd-certfile={{ k8s_master__pki_dir }}/{{ pki_tasks__fetch_etcd_client_crt.dest | basename }} \
-  --etcd-keyfile={{ k8s_master__pki_dir }}/{{ pki_tasks__fetch_etcd_client_key.dest | basename }} \
+  --etcd-cafile={{ k8s_master__pki_dir }}/etcd-ca.crt \
+  --etcd-certfile={{ k8s_master__pki_dir }}/etcd-client.crt \
+  --etcd-keyfile={{ k8s_master__pki_dir }}//etcd-client.key \
 {% if k8s_master__kube_apiserver_etcd_servers.auto_set %}
   --etcd-servers={{ _etcd_servers | join(',') }} \
 {% else %}
@@ -50,29 +50,29 @@ ExecStart=/usr/bin/kube-apiserver \
   --feature-gates={{ _feature_gates | join(',') }} \
 {% endif %}
   --insecure-port={{ k8s_master__kube_apiserver_insecure_port }} \
-  --kubelet-certificate-authority={{ k8s_master__pki_dir }}/{{ pki_tasks__fetch_k8s_ca_crt.dest | basename }} \
-  --kubelet-client-certificate={{ k8s_master__pki_dir }}/{{ pki_tasks__fetch_apiserver_kubelet_client_crt.dest | basename }} \
-  --kubelet-client-key={{ k8s_master__pki_dir }}/{{ pki_tasks__fetch_apiserver_kubelet_client_key.dest | basename }} \
+  --kubelet-certificate-authority={{ k8s_master__pki_dir }}/ca.crt \
+  --kubelet-client-certificate={{ k8s_master__pki_dir }}/apiserver-kubelet-client.crt \
+  --kubelet-client-key={{ k8s_master__pki_dir }}/apiserver-kubelet-client.key \
   --kubelet-port={{ k8s__kubelet_port }} \
   --kubelet-preferred-address-types={{ k8s_master__kube_apiserver_kubelet_preferred_address_types }} \
   --kubernetes-service-node-port={{ k8s_master__kube_apiserver_kubernetes_service_node_port }} \
   --profiling={{ k8s_master__kube_apiserver_profiling }} \
-  --proxy-client-cert-file={{ k8s_master__pki_dir }}/{{ pki_tasks__fetch_front_proxy_client_crt.dest | basename }} \
-  --proxy-client-key-file={{ k8s_master__pki_dir }}/{{ pki_tasks__fetch_front_proxy_client_key.dest | basename }} \
+  --proxy-client-cert-file={{ k8s_master__pki_dir }}/front-proxy-client.crt \
+  --proxy-client-key-file={{ k8s_master__pki_dir }}/front-proxy-client.key \
   --repair-malformed-updates={{ k8s_master__kube_apiserver_repair_malformed_updates }} \
   --requestheader-allowed-names=front-proxy-client \
-  --requestheader-client-ca-file={{ k8s_master__pki_dir }}/{{ pki_tasks__fetch_front_proxy_ca_crt.dest | basename }} \
+  --requestheader-client-ca-file={{ k8s_master__pki_dir }}/front-proxy-ca.crt \
   --requestheader-extra-headers-prefix=X-Remote-Extra- \
   --requestheader-group-headers=X-Remote-Group \
   --requestheader-username-headers=X-Remote-User \
   --secure-port={{ k8s__kube_apiserver_secure_port }} \
-  --service-account-key-file={{ k8s_master__pki_dir }}/{{ pki_tasks__fetch_kube_controller_manager_pub.dest | basename }} \
+  --service-account-key-file={{ k8s_master__pki_dir }}/kube-controller-manager.pub \
   --service-cluster-ip-range={{ k8s__service_cluster_ip_range }} \
   --service-node-port-range={{ k8s_master__kube_apiserver_service_node_port_range }} \
-  --tls-cert-file={{ k8s_master__pki_dir }}/{{ pki_tasks__fetch_kube_apiserver_crt.dest | basename }} \
+  --tls-cert-file={{ k8s_master__pki_dir }}/kube-apiserver.crt \
   --tls-cipher-suites={{ k8s_master__kube_apiserver_tls_cipher_suites }} \
   --tls-min-version={{ k8s_master__kube_apiserver_tls_min_version }} \
-  --tls-private-key-file={{ k8s_master__pki_dir }}/{{ pki_tasks__fetch_kube_apiserver_key.dest | basename }} \
+  --tls-private-key-file={{ k8s_master__pki_dir }}/kube-apiserver.key \
   --v={{ k8s_master__kube_apiserver_vlog_level }}
 Restart=always
 RestartSec={{ k8s_master__kube_apiserver_restart_sec }}s
