--- a/roles/k8s_node/templates/k8s_configs/kubelet.conf.j2
+++ b/roles/k8s_node/templates/k8s_configs/kubelet.conf.j2
@@ -3,7 +3,7 @@ apiVersion: kubelet.config.k8s.io/v1beta1
 address: {{ k8s_node__kubelet_address }}
 authentication:
   x509:
-    clientCAFile: {{ k8s_master__pki_dir }}/{{ pki_tasks__fetch_k8s_ca_crt.dest | basename }}
+    clientCAFile: {{ k8s_master__pki_dir }}/ca.crt
   webhook:
     enabled: false
     cacheTTL: "0s"
