--- a/roles/pki/templates/pki/openssl.conf.j2
+++ b/roles/pki/templates/pki/openssl.conf.j2
@@ -20,36 +20,34 @@ DNS.3 = kubernetes.default
 DNS.4 = kubernetes.default.svc
 DNS.5 = kubernetes.default.svc.cluster.local
 IP.1 = 127.0.0.1
-IP.2 = {{ k8s_master__service_ip_addr }}
-{% set _dns_idx = 6 %}
-{% set _ip_idx = 3 %}
+IP.2 = {{ k8s__service_ip_addr }}
+{% set _dns_idx = [6] %}
+{% set _ip_idx = [3] %}
 {% for _, _hostvar in hostvars.items() %}
     {%- if _hostvar.host__k8s_master %}
-DNS.{{ _dns_idx }} = {{ _hostvar.ansible_facts.fqdn }}
-IP.{{ _ip_idx }} = {{ _hostvar.host__public_address }}
-        {%- set _dns_idx = _dns_idx + 1 %}
-        {%- set _ip_idx = _ip_idx + 1 %}
+DNS.{{ _dns_idx[0] }} = {{ _hostvar.ansible_facts.fqdn }}
+IP.{{ _ip_idx[0] }} = {{ _hostvar.host__public_address }}
+        {%- set _ = _dns_idx.append(_dns_idx.pop() + 1) %}
+        {%- set _ = _ip_idx.append(_ip_idx.pop() + 1) %}
     {%- endif %}
-{% endfor %}
 
-[ v3_ca ]
-basicConstraints = critical, CA:TRUE
-keyUsage = critical, digitalSignature, keyEncipherment, keyCertSign
+{% endfor %}
 [ v3_req_etcd ]
 basicConstraints = CA:FALSE
 keyUsage = critical, digitalSignature, keyEncipherment
-extendedKeyUsage = serverAuth
+extendedKeyUsage = serverAuth, clientAuth
 subjectAltName = @alt_names_etcd
 [ alt_names_etcd ]
 DNS.1 = localhost
 IP.1 = 127.0.0.1
-{% set _dns_idx = 2 %}
-{% set _ip_idx = 2 %}
+{% set _dns_idx = [2] %}
+{% set _ip_idx = [2] %}
 {% for _, _hostvar in hostvars.items() %}
     {%- if _hostvar.host__etcd %}
-DNS.{{ _dns_idx }} = {{ _hostvar.ansible_facts.fqdn }}
-IP.{{ _ip_idx }} = {{ _hostvar.host__public_address }}
-        {%- set _dns_idx = _dns_idx + 1 %}
-        {%- set _ip_idx = _ip_idx + 1 %}
+DNS.{{ _dns_idx[0] }} = {{ _hostvar.ansible_facts.fqdn }}
+IP.{{ _ip_idx[0] }} = {{ _hostvar.host__public_address }}
+        {%- set _ = _dns_idx.append(_dns_idx.pop() + 1) %}
+        {%- set _ = _ip_idx.append(_ip_idx.pop() + 1) %}
     {%- endif %}
+
 {% endfor %}
