--- a/roles/k8s_node/templates/k8s_configs/kubelet.conf.j2
+++ b/roles/k8s_node/templates/k8s_configs/kubelet.conf.j2
@@ -37,6 +37,7 @@ maxPods: {{ k8s_node__kubelet_max_pods }}
 podPidsLimit: {{ k8s_node__kubelet_pod_pids_limit }}
 port: {{ k8s__kubelet_port }}
 readOnlyPort: 0
+rotateCertificates: {{ k8s_node__kubelet_rotate_certificates }}
 {% if k8s__static_pod.enabled %}
 staticPodPath: {{ k8s__static_pod.manifests_path }}
 {% endif %}
