--- a/roles/k8s_master/templates/systemd_units/kube-controller-manager.service.j2
+++ b/roles/k8s_master/templates/systemd_units/kube-controller-manager.service.j2
@@ -23,6 +23,7 @@ ExecStart=/usr/bin/kube-controller-manager \
 {% if _feature_gates|length > 0 %}
   --feature-gates={{ _feature_gates|join(',') }} \
 {% endif %}
+  --flex-volume-plugin-dir={{ k8s__volume_plugin_dir }} \
   --kubeconfig={{ k8s_master__kubeconfig_dir }}/kube-controller-manager.kubeconfig \
   --node-cidr-mask-size={{ k8s_master__kube_controller_manager_node_cidr_mask_size }} \
   --port={{ k8s_master__kube_controller_manager_port }} \
