Add proxy mode option to kube-proxy.

--- a/roles/k8s_node/templates/k8s_configs/kube-proxy.conf.j2
+++ b/roles/k8s_node/templates/k8s_configs/kube-proxy.conf.j2
@@ -16,4 +16,5 @@ featureGates:
 
 healthzBindAddress: {{ k8s_node__kube_proxy_healthz_bind_address }}
 metricsBindAddress: {{ k8s_node__kube_proxy_metrics_bind_address }}
+mode: {{ k8s_node__kube_proxy_mode }}
 portRange: {{ k8s_node__kube_proxy_port_range }}
