--- a/roles/pki/templates/pki/openssl.conf.j2
+++ b/roles/pki/templates/pki/openssl.conf.j2
@@ -24,7 +24,7 @@ IP.2 = {{ k8s__service_ip_addr }}
 {% set _dns_idx = [6] %}
 {% set _ip_idx = [3] %}
 {% for _, _hostvar in hostvars.items() %}
-    {%- if _hostvar.host__k8s_master %}
+    {%- if _hostvar.host__is_k8s_master %}
 DNS.{{ _dns_idx[0] }} = {{ _hostvar.ansible_facts.fqdn }}
 IP.{{ _ip_idx[0] }} = {{ _hostvar.host__public_address }}
         {%- set _ = _dns_idx.append(_dns_idx.pop() + 1) %}
@@ -43,7 +43,7 @@ IP.1 = 127.0.0.1
 {% set _dns_idx = [2] %}
 {% set _ip_idx = [2] %}
 {% for _, _hostvar in hostvars.items() %}
-    {%- if _hostvar.host__etcd %}
+    {%- if _hostvar.host__is_etcd %}
 DNS.{{ _dns_idx[0] }} = {{ _hostvar.ansible_facts.fqdn }}
 IP.{{ _ip_idx[0] }} = {{ _hostvar.host__public_address }}
         {%- set _ = _dns_idx.append(_dns_idx.pop() + 1) %}
