--- a/roles/k8s_master/templates/systemd_units/kube-controller-manager.service.j2
+++ b/roles/k8s_master/templates/systemd_units/kube-controller-manager.service.j2
@@ -1,7 +1,9 @@
 {% set _feature_gates = [] %}
-{% for _fg_name, _fg_flag in k8s__feature_gates.items() -%}
-    {{ _feature_gates.append('%s=%s'|format(_fg_name, _fg_flag)) }}
-{%- endfor %}
+{%- if k8s__feature_gates is defined -%}
+    {% for _fg_name, _fg_flag in k8s__feature_gates.items() -%}
+        {{ _feature_gates.append('%s=%s'|format(_fg_name, _fg_flag)) }}
+    {%- endfor %}
+{%- endif %}
 [Unit]
 Description=Kubernetes Controller Manager
 Documentation=https://github.com/kubernetes/kubernetes
