--- a/roles/k8s_node/templates/k8s_configs/kube-proxy.conf.j2
+++ b/roles/k8s_node/templates/k8s_configs/kube-proxy.conf.j2
@@ -5,7 +5,7 @@ clientConnection:
   kubeconfig: {{ k8s_node__kubeconfig_dir }}/kube-proxy.kubeconfig
 clusterCIDR: {{ k8s__cluster_cidr }}
 enableProfiling: {{ k8s_node__kube_proxy_enable_profiling }}
-{% if k8s__feature_gates %}
+{% if k8s__feature_gates is defined %}
 featureGates:
     {%- for _fg_name, _fg_flag in k8s__feature_gates.items() %}
 
