Make parameters regarding node eviction configurable.

--- a/roles/k8s_master/templates/systemd_units/kube-controller-manager.service.j2
+++ b/roles/k8s_master/templates/systemd_units/kube-controller-manager.service.j2
@@ -28,12 +28,19 @@ ExecStart=/usr/bin/kube-controller-manager \
   --flex-volume-plugin-dir={{ k8s__volume_plugin_dir }} \
   --kubeconfig={{ k8s_master__kubeconfig_dir }}/kube-controller-manager.kubeconfig \
   --node-cidr-mask-size={{ k8s_master__kube_controller_manager_node_cidr_mask_size }} \
+  --node-eviction-rate={{ k8s_master__kube_controller_manager_node_eviction_rate }} \
+  --node-monitor-grace-period={{ k8s_master__kube_controller_manager_node_monitor_grace_period }} \
+  --node-monitor-period={{ k8s_master__kube_controller_manager_node_monitor_period }} \
+  --node-startup-grace-period={{ k8s_master__kube_controller_manager_node_startup_grace_period }} \
+  --pod-eviction-timeout={{ k8s_master__kube_controller_manager_pod_eviction_timeout }} \
   --port={{ k8s_master__kube_controller_manager_port }} \
   --profiling={{ k8s_master__kube_controller_manager_profiling }} \
   --root-ca-file={{ k8s_master__pki_dir }}/ca.crt \
+  --secondary-node-eviction-rate={{ k8s_master__kube_controller_manager_secondary_node_eviction_rate }} \
   --secure-port={{ k8s_master__kube_controller_manager_secure_port }} \
   --service-account-private-key-file={{ k8s_master__pki_dir }}/kube-controller-manager.key \
   --service-cluster-ip-range={{ k8s__service_cluster_ip_range }} \
+  --unhealthy-zone-threshold={{ k8s_master__kube_controller_manager_unhealthy_zone_threshold }} \
   --use-service-account-credentials=true \
   --v={{ k8s_master__kube_controller_manager_vlog_level }}
 Restart=always
