--- a/roles/k8s_master/templates/systemd_units/kube-controller-manager.service.j2
+++ b/roles/k8s_master/templates/systemd_units/kube-controller-manager.service.j2
@@ -38,8 +38,12 @@ ExecStart=/usr/bin/kube-controller-manager \
   --root-ca-file={{ k8s_master__pki_dir }}/ca.crt \
   --secondary-node-eviction-rate={{ k8s_master__kube_controller_manager_secondary_node_eviction_rate }} \
   --secure-port={{ k8s_master__kube_controller_manager_secure_port }} \
-  --service-account-private-key-file={{ k8s_master__pki_dir }}/kube-controller-manager.key \
+  --service-account-private-key-file={{ k8s_master__pki_dir }}/kube-controller-manager-client.key \
   --service-cluster-ip-range={{ k8s__service_cluster_ip_range }} \
+  --tls-cert-file={{ k8s_master__pki_dir }}/kube-controller-manager-client.crt \
+  --tls-cipher-suites={{ k8s_master__kube_controller_manager_tls_cipher_suites }} \
+  --tls-min-version={{ k8s_master__kube_controller_manager_tls_min_version }} \
+  --tls-private-key-file={{ k8s_master__pki_dir }}/kube-controller-manager-client.key \
   --unhealthy-zone-threshold={{ k8s_master__kube_controller_manager_unhealthy_zone_threshold }} \
   --use-service-account-credentials=true \
   --v={{ k8s_master__kube_controller_manager_vlog_level }}
