--- a/roles/k8s_master/templates/systemd_units/kube-scheduler.service.j2
+++ b/roles/k8s_master/templates/systemd_units/kube-scheduler.service.j2
@@ -10,10 +10,14 @@ ExecStart=/usr/bin/kube-scheduler \
   --bind-address={{ k8s_master__kube_scheduler_bind_address }} \
   --config={{ k8s_master__k8s_configs_dir }}/kube-scheduler.conf \
   --secure-port={{ k8s_master__kube_scheduler_secure_port }} \
+{% if not k8s_master__kube_scheduler_use_auto_generated_serving_cert %}
   --tls-cert-file={{ k8s_master__pki_dir }}/kube-scheduler-client.crt \
+{% endif %}
   --tls-cipher-suites={{ k8s_master__kube_scheduler_tls_cipher_suites }} \
   --tls-min-version={{ k8s_master__kube_scheduler_tls_min_version }} \
+{% if not k8s_master__kube_scheduler_use_auto_generated_serving_cert %}
   --tls-private-key-file={{ k8s_master__pki_dir }}/kube-scheduler-client.key \
+{% endif %}
   --v={{ k8s_master__kube_scheduler_vlog_level }}
 Restart=always
 RestartSec={{ k8s_master__kube_scheduler_restart_sec }}s
